Add stub for handling intent android.settings.DREAM_SETTINGS
Test: Verified toast message by sending intent
Bug: 329301525
(cherry picked from https://googleplex-android-review.googlesource.com/q/commit:7ed1d0002ab9ab5fb9dee00ae5bf187fe8de7246)
Merged-In: I4bdd9a1acca64886c86f3df1b27495b2a35a6ea5
Change-Id: I4bdd9a1acca64886c86f3df1b27495b2a35a6ea5
DreamServices and DocumentsUI

--- a/FrameworkPackageStubs/res/values/strings.xml
+++ b/FrameworkPackageStubs/res/values/strings.xml
@@ -16,6 +16,9 @@
     <!-- Toast message displayed when documentsui isn't supported. [CHAR LIMIT=NONE] -->
     <string name="documentsui_not_supported">File Management is not supported on this device</string>
 
+    <!-- Toast message displayed when android.settings.DREAM_SETTINGS isn't supported. [CHAR LIMIT=NONE] -->
+    <string name="dream_not_supported">Screensavers are not supported on this device</string>
+
     <!-- Stub name [CHAR LIMIT=NONE]-->
     <string name="stub_name">None</string>
 
