Add choice dialog before starting bug reporting
Show a choice dialog to enable users choose the next action before
starting a default action.

If there is no user response in 5 seconds, it will automatically start a
default first action. The action is one of AUDIO_FIRST and AUDIO_LATER.

It can be triggered by
com.android.car.bugreport.action.START_BUG_REPORT action.

Bug: 301369131
Test: Run `adb shell am start -a com.android.car.bugreport.action.START_BUG_REPORT`
Change-Id: I063dc18157d870526493aa073382f10667ffafe4
(cherry picked from commit 40159131a5d1e1e21531f8f01aa4bf4cd5809b78)

--- a/tests/BugReportApp/res/values/strings.xml
+++ b/tests/BugReportApp/res/values/strings.xml
@@ -59,4 +59,9 @@
     <string name="notification_bugreport_channel_name">Bug report status channel</string>
     <string name="notification_screenshot_message">Taking a screenshot</string>
     <string name="notification_screenshot_channel_name">Bug report screenshot channel</string>
+
+    <!-- Choice dialog strings -->
+    <string name="choice_dialog_title">Ready to speak bug description</string>
+    <string name="choice_dialog_begin_now">Begin now</string>
+    <string name="choice_dialog_speak_later">Speak later</string>
 </resources>
