--- a/packages/CarDeveloperOptions/res/values-pt-rPT/strings.xml
+++ b/packages/CarDeveloperOptions/res/values-pt-rPT/strings.xml
@@ -18,6 +18,6 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="car_pref_category_title" msgid="5776370242269122076">"Carro"</string>
-    <string name="car_ui_plugin_enabled_pref_title" msgid="606705126746748119">"Ative o plug-in da biblioteca Car UI"</string>
-    <string name="car_ui_plugin_not_found_text" msgid="7654699744630868262">"Plug-in Car UI não encontrado"</string>
+    <string name="car_ui_plugin_enabled_pref_title" msgid="606705126746748119">"Ative o plugin da biblioteca Car UI"</string>
+    <string name="car_ui_plugin_not_found_text" msgid="7654699744630868262">"Plugin Car UI não encontrado"</string>
 </resources>
