--- a/FrameworkPackageStubs/res/values-fa/strings.xml
+++ b/FrameworkPackageStubs/res/values-fa/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name" msgid="6179574017413146651">"الگوی فعالیت"</string>
+    <string name="app_name" msgid="6179574017413146651">"فعالیت پایه"</string>
     <string name="message_not_supported" msgid="133939962837892495">"هیچ برنامه‌ای نمی‌تواند این کنش را انجام دهد"</string>
     <string name="pip_not_supported" msgid="8681268258599412706">"‏تصویر در تصویر در این دستگاه پشتیبانی نمی‌شود"</string>
     <string name="manage_unknown_app_sources_not_supported" msgid="7368611099531260439">"این دستگاه از «مدیریت منابع ناشناس برنامه» پشتیبانی نمی‌کند"</string>
