Added TURN_SIGNAL_LIGHT_STATE and TURN_SIGNAL_SWITCH to API
Bug: 374759699
Bug: 374759198

Test: atest CtsCarTestCases:CarPropertyManagerTest
CtsCarTestCases: VehiclePropertyIdsTest

Flag: android.car.feature.android_b_vehicle_properties
Change-Id: I2b8c9b2c54bd305cf7f915e029e591d124636b39

--- a/service/res/values/strings.xml
+++ b/service/res/values/strings.xml
@@ -323,6 +323,11 @@
     <!-- Permission text: apps access car's exterior lights state [CHAR LIMIT=NONE] -->
     <string name="car_permission_desc_car_exterior_lights">Access car\u2019s exterior lights state.</string>
 
+    <!-- Permission text: 3P apps access car's exterior lights state [CHAR LIMIT=NONE] -->
+    <string name="car_permission_label_read_car_exterior_lights">read car\u2019s exterior lights state</string>
+    <!-- Permission text: 3P apps access car's exterior lights state [CHAR LIMIT=NONE] -->
+    <string name="car_permission_desc_read_car_exterior_lights">Read car\u2019s exterior lights state.</string>
+
     <!-- Permission text: apps access car's glove box state [CHAR LIMIT=NONE] -->
     <string name="car_permission_label_control_glove_box">access car\u2019s glove box state</string>
     <!-- Permission text: apps access car's glove box state [CHAR LIMIT=NONE] -->
