--- a/service/res/values/strings.xml
+++ b/service/res/values/strings.xml
@@ -61,6 +61,10 @@
     <string name="car_permission_label_control_car_horn">control car\u2019s horn</string>
     <!-- Permission text: can control your car's horn [CHAR LIMIT=NONE] -->
     <string name="car_permission_desc_control_car_horn">Control your car\u2019s horn.</string>
+    <!-- Permission text: can access your car's pedal information [CHAR LIMIT=NONE] -->
+    <string name="car_permission_label_read_car_pedals">access car\u2019s pedal information</string>
+    <!-- Permission text: can access your car's pedal information [CHAR LIMIT=NONE] -->
+    <string name="car_permission_desc_read_car_pedals">Access your car\u2019s pedal information.</string>
     <!-- Permission text: can access your car's speed [CHAR LIMIT=NONE] -->
     <string name="car_permission_label_speed">read car\u2019s speed</string>
     <!-- Permission text: can access your car's speed [CHAR LIMIT=NONE] -->
