--- a/packages/CarManagedProvisioning/res/values-fa/strings.xml
+++ b/packages/CarManagedProvisioning/res/values-fa/strings.xml
@@ -27,7 +27,7 @@
     <string name="contact_your_admin_for_more_info" msgid="1419852317652804536">"برای دریافت اطلاعات بیشتر، ازجمله خط‌مشی‌های رازداری سازمان، با مدیر سازمان تماس بگیرید."</string>
     <string name="managed_device_info" msgid="2134697391634083944">"این خودرویی مدیریت‌شده است"</string>
     <string name="contact_your_admin_for_help" msgid="1741496631607502730">"برای راهنمایی با مدیر سازمان تماس بگیرید"</string>
-    <string name="fully_managed_device_provisioning_accept_header" msgid="8767138982035307813">"راه‌اندازی خودروی مدیریت‌شده"</string>
+    <string name="fully_managed_device_provisioning_accept_header" msgid="8767138982035307813">"راه‌اندازی خودرو مدیریت‌شده"</string>
     <string name="fully_managed_device_provisioning_step_1_header" msgid="8704166635032524345">"به برنامه‌های سازمان دسترسی داشته باشید"</string>
     <string name="fully_managed_device_provisioning_step_1_description" msgid="5960961281295355254">"درحال راه‌اندازی سیستم اطلاعات-سرگرمی…"</string>
     <string name="fully_managed_device_provisioning_step_2_header" msgid="5888602026900289468">"داده‌های سیستم اطلاعات-سرگرمی خصوصی نیستند"</string>
@@ -36,7 +36,7 @@
     <string name="fully_managed_device_provisioning_permissions_secondary_subheader" msgid="8955791361423166123">"مدیر سازمان می‌تواند اجازه‌های برنامه‌های این خودرو را نیز تنظیم کند، برای مثال، اجازه‌های میکروفون و مکان."</string>
     <string name="fully_managed_device_with_permission_control_provisioning_summary" msgid="2503568673345133100">"از سیستم اطلاعات-سرگرمی این خودرو برای دسترسی آسان به برنامه‌های کاری استفاده می‌شود. این خودرو خصوصی نیست، بنابراین ممکن است مدیر سازمان بتواند داده‌ها و فعالیتتان را ببیند. مدیر سازمان همچنین می‌تواند برای برنامه‌های این خودرو اجازه تنظیم کند، برای مثال، اجازه‌های میکروفون و مکان."</string>
     <string name="fully_managed_device_provisioning_summary" msgid="4323948058344613817">"از سیستم اطلاعات-سرگرمی این خودرو برای دسترسی آسان به برنامه‌های کاری استفاده می‌شود. این خودرو خصوصی نیست، بنابراین ممکن است مدیر سازمان بتواند داده‌ها و فعالیتتان را ببیند."</string>
-    <string name="fully_managed_device_provisioning_progress_label" msgid="988594700479673633">"درحال راه‌اندازی خودروی مدیریت‌شده"</string>
+    <string name="fully_managed_device_provisioning_progress_label" msgid="988594700479673633">"درحال راه‌اندازی خودرو مدیریت‌شده"</string>
     <string name="fully_managed_device_provisioning_return_device_title" msgid="1578111657911434819">"راه‌اندازی را لغو کنید و خودرو را برگردانید"</string>
     <string name="fully_managed_device_provisioning_return_device_subheader" msgid="5809488930429106172">"این خودرو را بازنشانی و به مدیر سازمان برگردانید یا برای ادامه راه‌اندازی به صفحه قبلی برگردید."</string>
     <string name="fully_managed_device_cancel_setup_button" msgid="4113790677940440998">"لغو راه‌اندازی"</string>
