Migrate caruiportrait to DA
- Use the BlankActivity as home, CarUiPortraitHomeScreen is
  deprecated.
- Move the current DisplayArea code to from CarCWDisplayAreaSystemUI
  to CarUiPortraitSystemUI

Bug: 376490065
Test: manual
Flag: EXEMPT refactor
Change-Id: I4906bf883d034dac7704b28cf6604a558202eee0

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/strings.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="back">Back</string>
     <!-- DisplayCompat fullscreen button [CHAR LIMIT=30] -->
     <string name="fullscreen">Full Screen</string>
+
+    <!-- Blank home message [CHAR LIMIT=20] -->
+    <string name="blank_home_message">Please open an app</string>
 </resources>
