Add text clarifying SSID case sensitivity
Note to users that SSIDs are case sensitive.

Flag: TEST_ONLY
Bug: 189157441
Test: open NetworkPreferenceApp, visually inspect
Change-Id: I69202a2b5dd7a90608bbc989dfefb9cb9b936222

--- a/tests/NetworkPreferenceApp/res/values/strings.xml
+++ b/tests/NetworkPreferenceApp/res/values/strings.xml
@@ -36,6 +36,7 @@
   <string name="label_metric_total_oem_managed" translatable="false">Total OEM Managed</string>
 
   <!-- Wifi PANS SSID control labels -->
+  <string name="ssid_case_sensitive_text" translatable="false">SSIDs are case sensitive</string>
   <string name="oem_paid_wifi_ssids_text" translatable="false">Wifi SSIDs with OEM_PAID capability (ssid1[:password],ssid2[:password2],...))</string>
   <string name="oem_private_wifi_ssids_text" translatable="false">Wifi SSIDs with OEM_PRIVATE capability (ssid1[:password],ssid2[:password2],...))</string>
   <string name="button_apply_wifi_configuration" translatable="false">Apply WiFi suggestions</string>
