Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I29548d763784e1d66a0150e1d5422c61dc03176d

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values-en-rCA/strings.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values-en-rCA/strings.xml
@@ -25,4 +25,5 @@
     <string name="audio_route_handset" msgid="8283803824498570957">"Phone"</string>
     <string name="back" msgid="2360066808525519279">"Back"</string>
     <string name="fullscreen" msgid="4312009981831027701">"Full Screen"</string>
+    <string name="blank_home_message" msgid="1931676618245482098">"Please open an app"</string>
 </resources>
