--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values-as/strings.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values-as/strings.xml
@@ -25,4 +25,6 @@
     <string name="audio_route_handset" msgid="8283803824498570957">"ফ’ন"</string>
     <string name="back" msgid="2360066808525519279">"উভতি যাওক"</string>
     <string name="fullscreen" msgid="4312009981831027701">"পূৰ্ণ স্ক্ৰীন"</string>
+    <!-- no translation found for blank_home_message (1931676618245482098) -->
+    <skip />
 </resources>
