--- a/car_product/car_ui_portrait/rro/CarUiPortraitMediaRRO/res/values-ja/strings.xml
+++ b/car_product/car_ui_portrait/rro/CarUiPortraitMediaRRO/res/values-ja/strings.xml
@@ -18,5 +18,5 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="menu_item_sound_settings_title" msgid="7268901744518462584">"音声の設定"</string>
-    <string name="menu_item_app_selector_title" msgid="1451058601709085741">"アプリセレクタ"</string>
+    <string name="menu_item_app_selector_title" msgid="1451058601709085741">"アプリの選択"</string>
 </resources>
