--- a/car_product/distant_display/apps/CarDistantDisplayPanoManager/res/values-mr/strings.xml
+++ b/car_product/distant_display/apps/CarDistantDisplayPanoManager/res/values-mr/strings.xml
@@ -17,7 +17,7 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name" msgid="8781877640168164420">"Pano Manager"</string>
+    <string name="app_name" msgid="8781877640168164420">"पॅनो मॅनेजर"</string>
     <string name="reorder_text" msgid="7608420601224723391">"पुन्हा क्रमाने लावण्यासाठी ड्रॅग करून ड्रॉप करा"</string>
     <string name="add_replace_button" msgid="2626543395053145392">"जोडा किंवा बदला"</string>
     <string name="done_button" msgid="3285551876610127365">"पूर्ण झाले"</string>
